@@ -26,7 +26,6 @@ require( dirname(__FILE__) . '/controllers/Common.php');			// common methods
 require( dirname(__FILE__) . '/controllers/Responses.php');			// exception, header and response handling
 
 # settings
-$enable_authentication = true;
 $time_response         = true;          // adds [time] to response
 $lock_file             = "";            // (optional) file to write lock to
 
@@ -55,7 +54,7 @@ try {
 	// verify that API is enabled on server
 	if($settings->api!=1) 									{ $Response->throw_exception(503, "API server disabled");}
 
-	# fetch app
+	// fetch app
 	$app = $Tools->fetch_object ("api", "app_id", $_GET['app_id']);
 
 	// verify app_id
@@ -98,7 +97,7 @@ try {
 		}
 	}
 	// SSL checks
-	elseif($app->app_security=="ssl") {
+	elseif($app->app_security=="ssl_token" || $app->app_security=="ssl_code") {
 		// verify SSL
 		if (!((!empty($_SERVER['HTTPS']) && $_SERVER['HTTPS'] !== 'off') || $_SERVER['SERVER_PORT'] == 443)) {
 															{ $Response->throw_exception(503, 'App requires SSL connection'); }
@@ -108,7 +107,13 @@ try {
 	}
 	// no security
 	elseif($app->app_security=="none") {
-		$params = (object) $_GET;
+		// make sure it is permitted in config.php
+		if ($api_allow_unsafe) {
+			$params = (object) $_GET;
+		}
+		else {
+			$Response->throw_exception(503, 'SSL connection is required for API');
+		}
 	}
 	// error, invalid security
 	else {
@@ -159,15 +164,35 @@ try {
 	/* Authentication ---------- */
 
 	// authenticate user if required
-	if (@$params->controller != "user" && $enable_authentication) {
-		if($app->app_security=="ssl" || $app->app_security=="none") {
+	if (@$params->controller != "user") {
+		if($app->app_security=="ssl_token" || $app->app_security=="none") {
 			// start auth class and validate connection
 			require( dirname(__FILE__) . '/controllers/User.php');				// authentication and token handling
 			$Authentication = new User_controller ($Database, $Tools, $params, $Response);
 			$Authentication->check_auth ();
 		}
-	}
 
+		// validate ssl_code
+		if($app->app_security=="ssl_code") {
+			// start auth class and validate connection
+			require( dirname(__FILE__) . '/controllers/User.php');				// authentication and token handling
+			$Authentication = new User_controller ($Database, $Tools, $params, $Response);
+			$Authentication->check_auth_code ($app->app_id);
+		}
+	}
+	// throw token not needed
+	else {
+		// validate ssl_code
+		if($app->app_security=="ssl_code") {
+			// start auth class and validate connection
+			require( dirname(__FILE__) . '/controllers/User.php');				// authentication and token handling
+			$Authentication = new User_controller ($Database, $Tools, $params, $Response);
+			$Authentication->check_auth_code ($app->app_id);
+
+			// passwd
+			$Response->throw_exception(409, 'Authentication not needed');
+		}
+	}
 
 	/* verify request ---------- */
 
@@ -287,6 +312,10 @@ if($time_response) {
 
 //output result
 echo $Response->formulate_result ($result, $time, $app->app_nest_custom_fields, $controller->custom_fields);
+
+// update access time
+try { $Database->updateObject("api", ["app_id"=>$app->app_id, "app_last_access"=>date("Y-m-d H:i:s")], 'app_id'); }
+catch (Exception $e) {}
 
 // exit
 exit();
